[project]
name = "pre-commit-matlab"
version = "1.2.0"
description = "A collection of pre-commit hooks for MATLAB"
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]
maintainers = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/pre-commit-matlab/blob/main/README.md"
Repository = "https://github.com/sco1/pre-commit-matlab"
Issues = "https://github.com/sco1/pre-commit-matlab/issues"
Changelog = "https://github.com/sco1/pre-commit-matlab/blob/main/CHANGELOG.md"

[project.scripts]
matlab-reflow-comments = "pre_commit_matlab.matlab_reflow_comments:main"

[tool.uv]
dev-dependencies = [
    "black~=25.0",
    "bump2version~=1.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=6.0",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-randomly~=3.15",
    "ruff~=0.6",
    "tox~=4.18",
    "tox-uv~=1.11",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "pre-commit-matlab,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
